# guilded-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: codecov.yml  lint.yml  test.yml
guilded/: Cargo.toml
guilded/src/: lib.rs
gwilight/: Cargo.toml
gwilight/src/: lib.rs
http/: Cargo.toml
http/src/: error.rs  json.rs  lib.rs  route.rs
http/src/client/: builder.rs  connector.rs  mod.rs
http/src/request/: mod.rs
http/src/request/messaging/: channel_message_create.rs  channel_message_delete.rs  channel_message_read.rs  channel_message_read_many.rs  channel_message_update.rs  mod.rs
http/src/request/server/: mod.rs  server_channel_create.rs  server_channel_delete.rs  server_channel_read.rs  server_channel_update.rs  server_read.rs
http/src/response/: error.rs  future.rs  mod.rs
model/: Cargo.toml
model/src/: lib.rs
model/src/channel/: mentions.rs  mod.rs
model/src/datetime/: display.rs  error.rs  mod.rs
model/src/docs/: mod.rs
model/src/document/: mod.rs
model/src/emote/: mod.rs
model/src/event/: mod.rs  rsvp.rs
model/src/events/: mod.rs
model/src/forum/: thread.rs  topic.rs
model/src/forum/topic/: comment.rs  mod.rs  partial.rs
model/src/gateway/payload/incoming/: bot_server_membership_created.rs  bot_server_membership_deleted.rs  calendar_event_created.rs  calendar_event_deleted.rs  calendar_event_rsvp_many_updated.rs  calendar_event_rsvp_updated.rs  calendar_event_updated.rs  channel_message_reaction_created.rs  channel_message_reaction_deleted.rs  chat_message_created.rs  chat_message_deleted.rs  chat_message_updated.rs  document_created.rs  document_deleted.rs  document_updated.rs  forum_topic_comment_created.rs  forum_topic_comment_deleted.rs  forum_topic_comment_updated.rs  forum_topic_created.rs  forum_topic_deleted.rs  forum_topic_locked.rs  forum_topic_pinned.rs  forum_topic_reaction_created.rs  forum_topic_reaction_deleted.rs  forum_topic_unlocked.rs  forum_topic_unpinned.rs  forum_topic_updated.rs  list_item_completed.rs  list_item_created.rs  list_item_deleted.rs  list_item_uncompleted.rs  list_item_updated.rs  mod.rs  server_channel_created.rs  server_channel_deleted.rs  server_channel_updated.rs  server_member_banned.rs  server_member_joined.rs  server_member_removed.rs  server_member_unbanned.rs  (+3 more)
model/src/id/: marker.rs  mod.rs
model/src/list/: mod.rs  note.rs  partial.rs
model/src/list/note/: mod.rs  partial.rs
model/src/messaging/: deleted_message.rs  embed.rs  mod.rs
model/src/reaction/: channel_message.rs  forum_topic.rs  mod.rs
model/src/reactions/: mod.rs
model/src/server/: mod.rs
model/src/server/member/: ban.rs  mod.rs  partial.rs
model/src/user/: mod.rs  partial.rs
model/src/webhook/: mod.rs
util/: Cargo.toml
util/src/: lib.rs
util/src/builder/embed/: author.rs  field.rs  footer.rs  image.rs  mod.rs  thumbnail.rs
validation/: Cargo.toml
validation/src/: channel.rs  embed.rs  lib.rs  message.rs
validation/src/embed/: author.rs  field.rs  footer.rs  image.rs  mod.rs  thumbnail.rs
validation/src/request/: messaging.rs  mod.rs
