[package]
name = "guilded_http"
authors = [ "Team HarTex" ]
description = """
Guilded API HTTP Client for the Guilded-rs ecosystem of crates.
"""
edition = "2021"
license = "ISC"
repository = "https://github.com/HarTexTeam/guilded-rs"
rust-version = "1.57.0"
version = "0.1.0-dev.12"

[dependencies]
guilded_model = "0.1.0-dev.23"
guilded_validation = "0.1.0-dev.16"

hyper = { default-features = false, features = [ "client", "http1", "http2", "runtime" ], version = "0.14.20" }
hyper-rustls = { default-features = false, optional = true, features = [ "http1", "http2" ], version = "0.23.0" }
hyper-tls = { default-features = false, optional = true, version = "0.5.0" }
hyper-trust-dns = { default-features = false, optional = true, version = "0.4.2" }
serde = "1.0.147"
serde_json = "1.0.87"
tokio = { version = "1.21.2", default-features = false, features = ["time"] }

[features]
default = [ "rustls-native-roots" ]
native = [ "hyper-tls" ]
rustls-native-roots = [ "hyper-rustls/native-tokio" ]
rustls-webpki-roots = [ "hyper-rustls/webpki-tokio" ]
trust-dns = [ "hyper-trust-dns" ]
