[package]
name = "guilded_model"
authors = [ "The HarTex Community" ]
description = """
Guilded API models for the Guilded-rs ecosystem of crates.
"""
edition = "2021"
license = "ISC"
repository = "https://github.com/HarTexTeam/guilded-rs"
rust-version = "1.57.0"
version = "0.1.0-dev.15"

[dependencies]
serde = { default-features = false, features = [ "derive", "std" ], version = "1.0.137" }
time = { default-features = false, features = [ "parsing", "std" ], version = "0.3.10" }
uuid = { default-features = false, features = [ "v5" ], version = "0.8.2" }
