[package]
name = "guilded_validation"
authors = [ "The HarTex Community" ]
description = """
Validation utilities for the Guilded-rs Ecosystem.
"""
edition = "2021"
license = "ISC"
repository = "https://github.com/HarTexTeam/guilded-rs"
rust-version = "1.57.0"
version = "0.1.0-dev.5"

[dependencies]
